Added example for custom BlockEncoding

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -142,33 +142,32 @@
     "\n",
     "- $G$ simply prepares the auxiliary variable in a superposition defined by the coefficients (or the weights) of the weighted sum of unitaries (LCU):\n",
     "\n",
-    "$$G\\ket{0}_{in\\_case}=\\ket{G}_{in\\_case}.$$\n",
+    "$$G\\ket{0}_{index}=\\ket{G}_{index}.$$\n",
     "\n",
-    "Here, we've denoted the ancillary variable as ``in_case``, short for \"inner case\".\n",
+    "Here, we've denoted the ancillary variable as ``index``.\n",
     "\n",
     "- $U$, on the other hand then selects \"just the right amount\" of each of the underlying unitaries in the weighted sum: \n",
     "\n",
-    "$$U\\ket{i}_{in\\_case}\\ket{\\psi}_{operand}=\\ket{i}_{in\\_case}U_i\\ket{\\psi}_{operand}.$$\n",
+    "$$U\\ket{i}_{index}\\ket{\\psi}_{operand}=\\ket{i}_{index}U_i\\ket{\\psi}_{operand}.$$\n",
     "\n",
     "As seen in the figure above, this can be done via multiple controlled operations. In Qrisp, however, we use [q_switch](../../../reference/Primitives/qswitch.rst), which is just another name for the select operator (multiplexor is another name found in literature for the same thing, btw). What's so special about [q_switch](../../../reference/Primitives/qswitch.rst)? Well, we've implemented a massively more efficient approach about how to apply such a (quantum) switch case (hence the name) based on balanced binary trees. For further information about this, please refer to the paper from Khattar and Gidney, [Rise of conditionally clean ancillae for efficient quantum circuit constructions](https://arxiv.org/pdf/2407.17966v1).\n",
     "\n",
     "How are we feeling? I assume that the researchers in the field could be portrayed with this emoji (😎), while people coming from outside of quantum can feel a bit overwhelmed (🥲). Let's balance the target audiences by a relevant example that is the cornerstone of solving partial differential equations, where we also explain how to use the [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) method (went quite the tangent, huh? Glad you're still here - it'll be worth it!).\n",
     "\n",
-    "Before showing an example, let us first quickly (and without the loss of generality, hopefully) showcase how all of this is done within the [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst) class. Feel free to also skip to the next section, showing the example of block-encoding the discrete Laplacian, for now and come back to this part after going through the Qubitization part of the BlockEncoding 201 tutorial.\n",
+    "Before showing an example, let us first quickly showcase how to manually define a [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst).\n",
+    "Feel free to also skip to the next section, showing the example of block-encoding the discrete Laplacian.\n",
     "\n",
     "You have been warned, let's get technical!\n",
     "\n",
-    "To manually define a BlockEncoding, you need to provide the three core components that define the LCU primitive:\n",
+    "To manually define a BlockEncoding, you need to provide the three core components:\n",
     "\n",
-    "- $\\alpha$ (alpha): The normalization constant. Since a unitary has a spectral norm of 1, and your matrix $A$ likely doesn't, we encode $A/\\alpha$.\n",
+    "- $\\alpha$ (alpha): The normalization factor. Since a unitary has a spectral norm of 1, and your matrix $A$ likely doesn't, we encode $A/\\alpha$.\n",
     "\n",
-    "- Ancilla Templates: A list of QuantumVariable types (templates) that define the \"address space\" for your SELECT operation.\n",
+    "- Ancilla templates: A list of [QuantumVariables](../../../reference/Core/QuantumVariable.rst) that serve as templates for the ancilla variables. For example, the ``index`` variable for the quantum switch case.\n",
     "\n",
-    "- The Unitary Function: A function that takes the ancilla(s) and the operand, and applies the controlled unitaries.\n",
+    "- The unitary: A function that takes the ancilla(s) and the operand(s), and applies the block encoding unitary.\n",
     "\n",
-    "Here is how ``.qubitization()`` is defined within the class (don't worry, the topic of Qubitization is heavily covered in the next tutorial), which allows for simply performing a walk operator on our BlockEncoding, and (again, as we will see in the second tutorial) plays a direct role in how to block-encode nice polynomials under the name Chebyshev polynomials. The path of learning is long and rewarding.\n",
-    "\n",
-    "This should give you an idea about how to go around implementing your own custom block encodings with the class. If you're interested, we would love to add your approaches as methods of our class in Qrisp - you can contribute your methods to the Qrisp GitHub repository (no pressure, of course, but highly encouraged, since... you know... open-source software development and all that jazz)."
+    "Below we give an example that essentially shows the inner workings of the [.from_operator](../../../reference/Block%20Encodings/methods/from_operator.rst) method:"
    ]
   },
   {
@@ -178,12 +177,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### EXAMPLE RENÈ\n",
-    "##### EXAMPLE RENÈ\n",
-    "##### EXAMPLE RENÈ\n",
-    "##### EXAMPLE RENÈ\n",
-    "##### EXAMPLE RENÈ\n",
-    "##### EXAMPLE RENÈ"
+    "from qrisp import conjugate, prepare, q_switch, QuantumFloat\n",
+    "from qrisp.operators import X, Y\n",
+    "\n",
+    "H = X(0)*X(1) + 0.2*Y(0)*Y(1)\n",
+    "\n",
+    "# Returns a list of unitaries, i.e., functions performing in-place operations \n",
+    "# on the operand quantum variable, and a list of coefficients.\n",
+    "unitaries, coeffs = H.unitaries()\n",
+    "n = len(unitaries).bit_length() # Number of qubits for ancillary variable.\n",
+    "alpha = np.sum(coeffs) # Block encoding normalization factor.\n",
+    "\n",
+    "# Define block-encoding unitary using LCU = PREP SELECT PREP_dg.\n",
+    "def U(anc, operand):\n",
+    "    with conjugate(prepare)(anc, coeffs):\n",
+    "        q_switch(anc, unitaries, operand) # quantum switch aka SELECT\n",
+    "\n",
+    "BE = BlockEncoding(\n",
+    "    alpha,  # Block encoding normalization factor.\n",
+    "    [QuantumFloat(n)],  # Templates for ancilla variables.\n",
+    "    U,  # Block encoding unitary.\n",
+    "    num_ops=1,  # Number of operand variables. The default is 1.\n",
+    "    is_hermitian=True,  # Indicates whether the unitary is Hermitian.\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f251539c",
+   "metadata": {},
+   "source": [
+    "This should give you an idea about how to go around implementing your own custom block encodings with the class. If you're interested, we would love to add your approaches as methods of our class in Qrisp - you can contribute your methods to the Qrisp GitHub repository (no pressure, of course, but highly encouraged, since... you know... open-source software development and all that jazz)."
    ]
   },
   {
