small correction to CD tutorial

--- a/documentation/source/general/tutorial/CD.ipynb
+++ b/documentation/source/general/tutorial/CD.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "## The concept of counterdiabatic driving\n",
     "\n",
-    "To drive a system adiabatically, we must meet the adiabatic condition. The LHS describes the size of energy gaps $\\Delta = E_m - E_n$ of different states $\\ket{m}, \\ket{n}$ \n",
+    "To drive a system adiabatically, we must meet the adiabatic condition. The left side of the inequality describes the size of energy gaps $\\Delta = E_m - E_n$ of different states $\\ket{m}, \\ket{n}$ \n",
     "compared the rate of change $ \\partial_{\\lambda} H(\\lambda)$ of the hamiltonian $H$ at times of the scheduling function $\\lambda(t) \\in \\left[0, 1\\right]$.\n",
     "\n",
     "$$ \\max_{n, m} \\left[ \\max_{\\lambda} \\bigg| \\frac{\n",
