Revision BE vol2

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -21,11 +21,11 @@
     "\n",
     "| Method | Purpose | Mathematical Basis |\n",
     "| :--- | :--- | :--- |\n",
-    "| [.qubitization()](../../../reference/Block%20Encodings/methods/qubitization.rst) | Transforms $A$ into a \"walk operator\" $W$ | Interleaved [reflection](../../../reference/Primitives/reflection.rst) + [q_switch](../../../reference/Primitives/qswitch.rst) |\n",
-    "| [.chebyshev(k)](../../../reference/Block%20Encodings/methods/chebyshev.rst) | Computes the $k$-th Chebyshev polynomial $T_k$ | Iterative application of $W^k$ ([.qubitization](../../../reference/Block%20Encodings/methods/qubitization.rst)) |\n",
-    "| [.poly(coeffs)](../../../reference/Block%20Encodings/methods/poly.rst) | Applies an arbitrary polynomial transformation $P(A)$ | [GQSP]((https://arxiv.org/pdf/2308.01501)) |\n",
-    "| [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst) | Solves the [linear system](https://arxiv.org/pdf/2411.02522) $Ax = b$ | $1/x$ polynomial approximation |\n",
-    "| [.sim(t, N)](../../../reference/Block%20Encodings/methods/sim.rst) | Simulates Hamiltonian evolution $e^{-iHt}$ | Jacobi-Anger expansion (Bessel functions) |\n",
+    "| [.qubitization()](../../../reference/Block%20Encodings/methods/qubitization.rst) | Encodes $A$ into a \"walk operator\" $W$ |  [reflection](../../../reference/Primitives/reflection.rst) |\n",
+    "| [.chebyshev(k)](../../../reference/Block%20Encodings/methods/chebyshev.rst) | Computes the $k$-th Chebyshev polynomial $T_k(A)$ | Iterative application of $W^k$ |\n",
+    "| [.poly(coeffs)](../../../reference/Block%20Encodings/methods/poly.rst) | Applies an arbitrary polynomial transformation $P(A)$ | [GQSP]((https://arxiv.org/pdf/2308.01501)), [GQET](https://arxiv.org/pdf/2312.00723)|\n",
+    "| [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst) | Solves the [linear system](https://arxiv.org/pdf/2411.02522) $Ax = b$ | [GQSP]((https://arxiv.org/pdf/2308.01501)), $1/x$ Chebyshev approximation |\n",
+    "| [.sim(t, N)](../../../reference/Block%20Encodings/methods/sim.rst) | Simulates Hamiltonian evolution $e^{-iHt}$ | [GQSP]((https://arxiv.org/pdf/2308.01501)), Jacobi-Anger expansion (Bessel functions) |\n",
     "\n",
     "But first things first. Let's break down the concept called qubitization."
    ]
@@ -38,7 +38,7 @@
     "## Qubitization\n",
     "If a Block Encoding is a \"static snapshot\" of a matrix $A$, Qubitization is what makes it \"move\". Technically, Qubitization is a method to transform an $(\\alpha, m, \\epsilon)$-block-encoding of a matrix $A$ into a special unitary operator $W$, often referred to as the \"walk operator\". This operator has a nice property: it maps the eigenvalues $\\lambda$ of $A$ to the eigenvalues $e^{\\pm i \\arccos(\\lambda/\\alpha)}$ in a set of two-dimensional invariant subspaces. \n",
     "\n",
-    "Given a Hermitian matrix $H$ and its block-encoding $(U, G)$, where $G\\ket{0} = \\ket{G}$, we use the definition of the reflection operator $R$ acting on the ancilla space as $R = (2\\ket{G}\\bra{G}_a \\otimes \\mathbb{1}_a)\\otimes \\mathbb{1}_{s}$ from [Lemma 1 in Exact and efficient Lanczos method on a quantum computer](https://arxiv.org/pdf/2208.00567). To \"qubitize\" the encoding, we interleave the SELECT operator with this reflection. The Qubitized Walk Operator $W$ is defined as $W = \\text{SELECT}\\cdot R$.\n",
+    "Given a Hermitian matrix $H$ and its block-encoding $(U, G)$, where $G\\ket{0} = \\ket{G}$, we use the definition of the reflection operator $R$ acting on the ancilla space as $R = (2\\ket{G}\\bra{G}_a \\otimes \\mathbb{1}_a)\\otimes \\mathbb{1}_{s}$ from [Lemma 1 in Exact and efficient Lanczos method on a quantum computer](https://arxiv.org/pdf/2208.00567). To \"qubitize\" the encoding, we interleave the SELECT operator with this reflection. The Qubitized Walk Operator $W$ is defined as $W = U\\cdot R$.\n",
     "\n",
     "Rigorous analysis (see [Lin Lin, Chapter 8](https://arxiv.org/pdf/2201.08309)) shows that if $\\ket{\\psi_\\lambda}$ is an eigenvector of $H/\\alpha$ with eigenvalue $\\lambda \\in [-1, 1]$, the walk operator $W$ doesn't wander through the whole Hilbert space. Instead, it acts on an invariant 2D subspace spanned by the \"ideal\" state $\\ket{G}\\ket{\\psi_\\lambda}$ and its orthogonal complement $\\ket{\\perp}$ (a very high dimensional vector space, and not a single vector). Within this subspace, the eigenvalues of $W$ are $\\mu_\\pm = \\lambda \\pm i\\sqrt{1-\\lambda^2} = e^{\\pm i \\arccos(\\lambda)}$. Essentially, Qubitization \"lifts\" the eigenvalues of our matrix onto the unit circle in the complex plane, allowing us to manipulate them using phase rotations.\n",
     "\n",
@@ -355,7 +355,7 @@
     "Mathematically, the prepared state takes the following form:\n",
     "$$\\ket{\\text{unary}} \\propto \\sqrt{\\alpha_1}\\ket{100\\dots00} + (-1) \\sqrt{\\alpha_3}\\ket{110\\dots00} + (-1)^2 \\sqrt{\\alpha_5}\\ket{111\\dots00} +\\cdots + (-1)^{j_0-1}\\sqrt{\\alpha_{2j_0-1}}\\ket{111\\dots10} +(-1)^{j_0}\\sqrt{\\alpha_{2j_0+1}}\\ket{111\\dots11}.$$\n",
     "\n",
-    "The key to this decomposition is its cumulative \"thermometer\" structure. Each sequential state, $\\ket{1^m 0^{N-m}}$, adds exactly one contiguous $\\ket{1}$ from left to right. Because these $\\ket{1}$s are cumulative, the system does not need to decode a binary string to know which unitary to apply. Instead, the state of the $m$-th ancillary qubit alone acts as a single control trigger for its corresponding unitary segment.\n",
+    "The key to this decomposition is its cumulative \"thermometer\" structure. Each sequential state, $\\ket{1^m 0^{N-m}}$, adds exactly one contiguous $\\ket{1}$ from left to right. Because these $\\ket{1}$ are cumulative, the system does not need to decode a binary string to know which unitary to apply. Instead, the state of the $m$-th ancillary qubit alone acts as a single control trigger for its corresponding unitary segment.\n",
     "\n",
     "We handle the alternating negative signs of the coefficients $\\alpha_k$ simply by applying $Z$ gates to the respective outer ancillary qubits. Once this superposition is prepared, the unitaries are activated sequentially based on the presence of $\\ket{1}$:\n",
     "\n",
@@ -518,15 +518,19 @@
     "### Lifting constraints and generalizing QSP\n",
     "While standard QSVT is a milestone, it is limited by the parity constraint. In simpler terms, that the polynomials must be strictly even or odd, and their coefficients be real (I'm sure that was a social media at some point, right?). \n",
     "\n",
-    "Recent advancements (e.g., [Sünderhauf, 2023](https://arxiv.org/pdf/2312.00723)) have introduced Generalized versions that remove these restrictions.\n",
+    "Recent advancements (e.g., [Motlagh & Wiebe, 2023](https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.5.020368), [Sünderhauf, 2023](https://arxiv.org/pdf/2312.00723)) have introduced Generalized versions that remove these restrictions.\n",
     "\n",
-    "- GQET (Generalized Quantum Eigenvalue Transformation): Specifically for Hermitian matrices, GQET applies complex polynomials $P(x)$ to eigenvalues. Unlike standard QET, $P(x)$ can have indefinite parity (e.g., $P(x) = x^2 + x + 1$), enabled by using general $SU(2)$ rotations in the signal processing stage.\n",
+    "- GQSP (Generalized Quantum Signal Processing): GQSP applies complex polynomials $P(z)$ to unitaries $U$. Unlike standard QSP, $P(z)$ can have indefinite parity (e.g., $P(z) = z^2 + z + 1$), enabled by using general $SU(2)$ rotations in the signal processing stage.\n",
     "\n",
-    "- GQSVT (Generalized Quantum Singular Value Transformation): This extends QSVT to arbitrary matrices using the generalized framework, allowing for mixed parity polynomials.\n",
+    "- GQET (Generalized Quantum Eigenvalue Transformation): For Hermitian matrices, GQET applies complex polynomials $P(z)$ to eigenvalues. Unlike standard QET, $P(z)$ can have indefinite parity (e.g., $P(z) = z^2 + z + 1$).\n",
+    "\n",
+    "- GQSVT (Generalized Quantum Singular Value Transformation): This extends GQET to arbitrary matrices using the generalized framework.\n",
     "\n",
     "Why does this generalization matter so much? It allows for mixed parity polynomial, resulting in you being to implement functions like $e^{-iAt}$ directly without splitting them into sine (odd) and cosine (even) components.\n",
     "\n",
-    "Apart from that, finding phase factors for standard QSVT is often a hard optimization problem scaling as $\\tilde{O}(d^2)$. In the Generalized (GQSP) framework, phases can often be computed in linear time $\\tilde{O}(d)$, making it significantly more practical for more quantum resource heavy application. This can also be see through the underlying circuit, which simplifies to the following schematics:\n",
+    "Apart from that, finding precise phase factors for standard QSP/QSVT used to be challenging. In the Generalized (GQSP) framework, phases can be computed efficiently (see [Laneve](https://arxiv.org/abs/2503.03026), [Ni et al.](https://arxiv.org/pdf/2505.12615)) in time $\\mathcal O(d\\log(d))$, making it significantly more practical. (Of course this is already integrated in Qrisp, such that you don't have to care about these phases.)\n",
+    "\n",
+    "The structure of GQSP is shown in the following schematics:\n",
     "\n",
     "![Alt text](GQSP.png)\n",
     "\n",
@@ -889,6 +893,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc4dcca6",
+   "metadata": {},
+   "source": [
+    "The result dictionary shows the measurement probabilites for evolved state\n",
+    "    \n",
+    "$$ \\ket{\\psi(t)} = \\dfrac{e^{itH}\\ket{0}}{\\|e^{itH}\\ket{0}\\|}. $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "956be4ee",
    "metadata": {},
    "source": [
@@ -902,30 +916,12 @@
     "\n",
     "- QSP/GQSP is the steering wheel, allowing you to transform $A$ into almost any $f(A)$.\n",
     "\n",
-    "- Qrisp is the autopilot, solving for phase angles and automating resource management and uncomputation.\n",
+    "- Qrisp is the autopilot, solving for phase angles and automating circuit construction and resource management.\n",
     "\n",
     "- Always do your due diligence and estimate your quantum resources of your state-of-the-art top notch block encoding and other algorithmic approach.\n",
     "\n",
     "If you’re ready to get your hands dirty, the next tutorial puts these tools to work on a 10-qubit Heisenberg model. We’ll show you how to use Gaussian filtering to get a better ground state and use Chebyshev you're now a pro at. You will also use a Repeat-Until-Success (RUS) trick in Qrisp to lock in your desired state. Finally, we’ll double-check the work together by watching the energy levels drop, proving that you’ve successfully found the ground state. It’s the perfect way to see how all this theory actually solves a real-world physics problem.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ad4e3963",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db51f2e8",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9c82b303",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
