Further polishing, comment on the condition number for the Laplacian in BE_vol2

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -398,11 +398,11 @@
    "source": [
     "Let's now compare the outputs.\n",
     "\n",
-    "{'gate counts': {'cx': 156, 'gphase': 2, 'p': 7, 'u3': 30, 't_dg': 64, 'x': 15, 't': 48, 'cy': 14, 'h': 32}, 'depth': 220}\n",
+    "{'gate counts': {'x': 15, 'p': 7, 't': 48, 'cy': 14, 'gphase': 2, 't_dg': 64, 'u3': 30, 'cx': 156, 'h': 32}, 'depth': 220, 'qubits': 12}\n",
     "\n",
-    "{'gate counts': {'cx': 72, 'gphase': 2, 'p': 2, 'u3': 6, 's': 6, 't_dg': 20, 'x': 5, 't': 18, 'h': 22, 'measure': 6}, 'depth': 116}\n",
+    "{'gate counts': {'x': 5, 's': 6, 'p': 2, 't': 18, 'gphase': 2, 't_dg': 20, 'u3': 6, 'cx': 72, 'h': 22, 'measure': 6}, 'depth': 60, 'qubits': 11}\n",
     "\n",
-    "Even if you don't know what any of the letters or strings actually mean, you can clearly see that the values of the bottom dictionary are lower than the one on the top. To say it in quantum jargon, the [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) is (much) more efficient than [.from_array](../../../reference/Block%20Encodings/methods/from_array.rst), which is just a simpler interface to [.from_operator](../../../reference/Block%20Encodings/methods/from_operator.rst) . And the difference will grow for larger matrix size $N$.\n",
+    "Even if you don't know what any of the letters or strings actually mean, you can clearly see that the values of the bottom dictionary are lower than the one on the top. To say it in quantum jargon, the [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) is (much) more efficient than [.from_array](../../../reference/Block%20Encodings/methods/from_array.rst), which is just a simpler interface to [.from_operator](../../../reference/Block%20Encodings/methods/from_operator.rst). And the difference will grow for larger matrix size $N$.\n",
     "\n",
     "Why is that? Well, it all comes down to which unitaries and how many do we want to combine to construct the block encoding. In the custom block encoding it's rather self apparent: we need three unitaries to construct the Laplacian, as seen above. The [.from_array](../../../reference/Block%20Encodings/methods/from_array.rst) and [.from_operator](../../../reference/Block%20Encodings/methods/from_operator.rst) methods, on the other hand, construct block encodings by decomposing the Hamiltonian into a linear combination of Pauli strings. If you're asking what is a Pauli string, here's a quick intuitive answer.\n",
     "\n",
