--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -208,7 +208,7 @@
    "id": "584203ee",
    "metadata": {},
    "source": [
-    "If you look at the printed output of your benchmark, you’ll notice a very satisfying trend: the gate counts and depth grow linearly with $k$.\n",
+    "If you look at the printed output of your benchmark, you’ll notice a very satisfying trend: the gate counts and depth grow linearly with $k$, the amount of qubits required stays the same.\n",
     "\n",
     "In the classical world, high-order polynomial approximations often come with a heavy computational tax. On a quantum computer, thanks to Qubitization, the $k$-th Chebyshev polynomial $T_k$ is implemented simply by repeating the walk operator $W$ exactly $k$ times. This efficiency is the \"secret sauce\" behind many modern quantum algorithms. We, therefore, get high-precision approximations without the exponential gate-count explosion.\n",
     "\n",
@@ -400,10 +400,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "305934fc",
+   "id": "a4d34e4b",
    "metadata": {},
    "source": [
     "Feel free to experiment with the precision and use [.resources](../../../reference/Block%20Encodings/methods/resources.rst) to see how it impacts gate counts and depth, which is a direct consequence of approximating the inverse with a higher-degree Chebyshev polynomial $T_k$. We also encourage you to try the 'custom block encoding' for the Laplacian operator from the previous tutorial; as noted in BlockEncoding 101, the [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) approach is significantly more efficient. In fact, we really urge you to try it now! The Laplacian is a genuinely relevant sparse matrix where quantum speedups can be really \"felt\" since it's used in applications ranging from fluid dynamics to Quantum Support Vector Machines in quantum machine learning (proving there's substance behind the hype, after all!).\n",
+    "\n",
+    "Actually, let's just get the resources right now, why shouldn't we, it's easy!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bce4e592",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BA = BlockEncoding.from_array(A)\n",
+    "BE_CKS = CKS(BA, 0.01, kappa)\n",
+    "BE_CKS.resources(QuantumFloat(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "305934fc",
+   "metadata": {},
+   "source": [
+    "As we see, the gate counts and depth are over the roof! This is expected, though since CKS will likely provide an advantage for sparse matrices (with efficient block-encodings), the one we just performed the inversion one is, in fact, dense. We'll retry this example and resource estimation for a sparse matrix a bit further below when comparing the performance to the ``.inv(epsilon, kappa)``, so stay tuned!\n",
     "\n",
     "While Chebyshev polynomials are the \"optimal\" choice for many tasks, they are still just one type of polynomial. What if you want to implement a step function to filter states? Or an inverse function $1/x$ for solving linear systems of equations? Or a complex exponential $e^{-ixt}$ for Hamiltonian simulation?\n",
     "\n",
@@ -605,27 +627,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qrisp.jasp import count_ops, depth\n",
-    "\n",
-    "@count_ops(meas_behavior=\"0\")\n",
-    "def main():\n",
-    "\n",
-    "    BA = BlockEncoding.from_array(A)\n",
-    "    x = CKS(BA, 0.01, kappa).apply_rus(prep_b)()\n",
-    "    return x\n",
-    "\n",
-    "@depth(meas_behavior=\"0\")\n",
-    "def main2():\n",
-    "\n",
-    "    BA = BlockEncoding.from_array(A)\n",
-    "    x = CKS(BA, 0.01, kappa).apply_rus(prep_b)()\n",
-    "    return x\n",
+    "BA_CKS = CKS(BA, eps=0.01, kappa=kappa)\n",
     "\n",
     "print(BA_inv.resources(QuantumFloat(2)))\n",
-    "gate_counts_CKS = main()\n",
-    "depth_cks = main2()\n",
+    "print(BA_CKS.resources(QuantumFloat(2)))\n",
     "\n",
-    "print(f\"{{'gate counts': {gate_counts_CKS}, 'depth': {depth_cks}}}\")\n"
+    "from qrisp.algorithms.cks import cks_params\n",
+    "print(cks_params(0.01, kappa))\n"
    ]
   },
   {
@@ -633,7 +641,9 @@
    "id": "ac51c7b3",
    "metadata": {},
    "source": [
-    "Uhm, that's surprising on two accounts?! Firstly, the resources for this seem enormous? And this is expected, because we're trying to invert a dense matrix, whereas the exponential quantum speedup comes for some specific, sparse, matrices - this means that they have only a small amount of entries, with all the rest being zero. Remember the Laplacian from the previous tutorial - it's mostly zeroes. The second surprise is that CKS does seen to be more efficient here, which is not what the complexity lower bound would suggest, right? Let's see the quality of the solutions in attempt to cheer up [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst)."
+    "Uhm, that's surprising on two accounts?! Firstly, the resources for this seem enormous? And, again, this is expected, because we're (still) trying to invert a dense matrix (same as above). As already mentioned, the exponential quantum speedup comes for some specific, sparse, matrices - this means that they have only a small amount of entries, with all the rest being zero. Remember the Laplacian from the previous tutorial - it's mostly zeroes. \n",
+    "\n",
+    "The second surprise is that gate counts and depth are **almost exactly the same**?! This stems from both having **almost exactly the same** structure of the algorithm (when Qrisp optimizations of the CKS circuit visualized above come into play). The only difference is the amount of qubits! This is also easily explainable: while CKS needs 14 auxiliary qubits (which is understandeable since we're approximating the polynomial of the degree 25: $T_25$, which corresponds to 13 odd terms, which also the code above shows (12+1=13)), QET (which leverages the fact of having parity polynomials, resulting in a more efficient circuit) requires **only one**.  Let's check also the quality of the solutions of [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst) and compare to those obtained with CKS:"
    ]
   },
   {
@@ -677,7 +687,9 @@
    "id": "257a5cb5",
    "metadata": {},
    "source": [
-    "Cheering up didn't help. As a last resort, let's try another example of the Laplacian operator with the custom block encoding (providing the answers to the homework given above. You're... welcome?)."
+    "Also the quality of results for $\\epsilon = 0.01$ and $\\kappa$ are **almost the same**. Nice!\n",
+    "\n",
+    "Let's try another example of the Laplacian operator (which is actually sparse, this time) with the custom block encoding (providing the answers to the homework given above. You're... welcome?)."
    ]
   },
   {
@@ -687,8 +699,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "N = 8\n",
+    "I = np.eye(N)\n",
+    "L_well = 5 * I - np.eye(N, k=1) - np.eye(N, k=-1)\n",
+    "L_well[0, N-1] = -1\n",
+    "L_well[N-1, 0] = -1\n",
+    "\n",
     "from qrisp import gphase\n",
-    "from qrisp.jasp import count_ops, depth\n",
     "\n",
     "def I(qv):\n",
     "    # Identity: do nothing\n",
@@ -706,27 +725,13 @@
     "\n",
     "unitaries = [I, V, V_dg]\n",
     "coeffs = np.array([2.0, 1.0, 1.0])\n",
-    "BE = BlockEncoding.from_lcu(coeffs, unitaries)\n",
+    "BE_L = BlockEncoding.from_lcu(coeffs, unitaries)\n",
+    "print(\"kappa = \", np.linalg.cond(L_well))\n",
+    "BE_inv = BE_L.inv(eps=0.01, kappa = np.linalg.cond(L_well))\n",
+    "print(BE_inv.resources(QuantumFloat(4)))\n",
     "\n",
-    "BE_inv = BE.inv(eps=0.01, kappa = np.linalg.cond(A))\n",
-    "print(BE_inv.resources(QuantumFloat(2)))\n",
-    "\n",
-    "@count_ops(meas_behavior=\"0\")\n",
-    "def main():\n",
-    "\n",
-    "    x = CKS(BE, 0.01, kappa).apply_rus(prep_b)()\n",
-    "    return x\n",
-    "\n",
-    "@depth(meas_behavior=\"0\")\n",
-    "def main2():\n",
-    "\n",
-    "    x = CKS(BE, 0.01, kappa).apply_rus(prep_b)()\n",
-    "    return x\n",
-    "\n",
-    "gate_counts_CKS = main()\n",
-    "depth_cks = main2()\n",
-    "\n",
-    "print(f\"{{'gate counts': {gate_counts_CKS}, 'depth': {depth_cks}}}\")\n"
+    "BE_CKS = CKS(BE_L, eps=0.01, kappa=np.linalg.cond(L_well))\n",
+    "print(BE_CKS.resources(QuantumFloat(4)))\n"
    ]
   },
   {
@@ -734,9 +739,81 @@
    "id": "e95d77fd",
    "metadata": {},
    "source": [
-    "And this, ladies and gentlemen interested in block encodings, is how quantum resource estimation is done, simply and efficiently!\n",
+    "Celebratory: \"And this, ladies and gentlemen interested in block encodings, is how quantum resource estimation is done, simply and efficiently!\". \n",
     "\n",
-    "Oh, and a comment on the results: CKS ain't too shabby afterall! This is why, fellow readers, you should always do your due diligence and perform analysis of the resources. \"Big O\" notation can be misleading because it ommits the scaling factors. Well, in this case the results were actually expected because the circuits are extremely similar. But still, estimate your quantum resources!"
+    "Crunching the numbers, we again observe a similar behavior when it comes to gate counts and depth with the same difference of used qubits following the same reasoning we laid down in the dense matrix example above.\n",
+    "\n",
+    "The astute readers among you will notice that it is not **exactly** the same matrix $L$ we're inverting here, compared to the one in the previous tutorial. This is because the discrete Laplacian from the previous tutorial is ill-conditioned, meaning it condition number $\\kappa$ is enormous! We then use the trick to, instead, increase the values on the main diagonal of $L$, resulting in a lower condition number - it is well conditioned (hence the name ``L_well``, or $L_\\text{well}$ written fancier).\n",
+    "\n",
+    "As a proof of concept as to just how ill-contitioned the original $L$ (let's first rename it to $L_\\text{ill}$ from the previous tutorial is, we welcome you to invert it using Numpy. Let's just show how large $\\kappa$ is for that pesky matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a558ca4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 8\n",
+    "I = np.eye(N)\n",
+    "L_ill = 2 * I - np.eye(N, k=1) - np.eye(N, k=-1)\n",
+    "L_ill[0, N-1] = -1\n",
+    "L_ill[N-1, 0] = -1\n",
+    "\n",
+    "print(np.linalg.cond(L_ill))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b129aee",
+   "metadata": {},
+   "source": [
+    "Yes, you read that right! And, you might wonder how many terms of our beloved Chebyshevs we would need for this. Let's see:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67e43944",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qrisp.algorithms.cks import cks_params\n",
+    "j_0, _ = cks_params(0.01, np.linalg.cond(L_ill))\n",
+    "print(\"CKS parameters: j_0 =\", j_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36cf20de",
+   "metadata": {},
+   "source": [
+    "Yes... A lot! Oh, and by the way, not even Numpy can invert $L_\\text{ill}$!!!\n",
+    "\n",
+    "Our \"more friendly Laplacian\" with increased values on the diagonal is much more manageable, and therefore solvable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fba6fef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.linalg.cond(L_well))\n",
+    "j_0, _ = cks_params(0.01, np.linalg.cond(L_well))\n",
+    "print(\"CKS parameters: j_0 =\", j_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b41bae2d",
+   "metadata": {},
+   "source": [
+    "We see that we need only 17 Chebyshevs for this, which is peanuts compared to 4238761233361477633 terms we'd need to approximate the inverse of $L_\\text{ill}$. This is something that we share with our classical colleagues, where the problem of ill-contitioning is still present. There is definititely tricks that we can learn (or rather copy their homework) in the form of [preconditioning](https://en.wikipedia.org/wiki/Preconditioner) our ill-contitioned matrices.\n",
+    "\n",
+    "Concluding this side quest (deciding  on how well conditioned this side quest actually was is left as an exercise for the reader), let's actually comment on the results of comparing the resources: CKS ain't too shabby afterall! This is why, fellow readers, you should always do your due diligence and perform analysis of the resources. \"Big O\" notation can be misleading because it ommits the scaling factors. Well, in this case the results were actually expected because the underlying structures of both algorithms are extremely similar (apart from the qubits required to performs controls on). But still, estimate your quantum resources!"
    ]
   },
   {
