--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "- [.from_operator](../../../reference/Block%20Encodings/methods/from_operator.rst) constructs a Blockencoding directly from a Hamiltonian constructed via QubitOperators, or FermionicOperators,\n",
     "\n",
-    "- [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst)` constructs a BlockEncoding using the Linear Combination of Unitaries approach,\n",
+    "- [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) constructs a BlockEncoding using the Linear Combination of Unitaries approach,\n",
     "\n",
     "- Direct construction via the [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst) class constructor allows you to manually define a new encoding by specifying a ``new_alpha``, ``new_anc_templates``, and a ``new_unitary`` function and returning ``BlockEncoding(new_alpha, new_anc_templates, new_unitary, num_ops=self.num_ops)``.\n",
     "\n",
@@ -122,7 +122,7 @@
     "\n",
     "And this is exactly what these methods do. The former takes an arbitrary square matrix and expresses it as a weighted sum of these Pauli strings ($A=\\sum_j\\alpha_j P_j$), where $\\alpha_j$ is a scalar coefficient (aka a number) and $P_j$ is a Pauli string, while in the latter, we already provide the Hamiltonian in terms of these Pauli strings.\n",
     "\n",
-    "Essentially, the third approach, [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst), is the epitome of block encoding. I mean, what it does is actually in the acronym: Linear Combination of Unitaries (or for the academic practitioners among you: $A=\\sum_i\\alpha_i U_i$).\n",
+    "Essentially, the third approach, [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) , is the epitome of block encoding. I mean, what it does is actually in the acronym: Linear Combination of Unitaries (or for the academic practitioners among you: $A=\\sum_i\\alpha_i U_i$).\n",
     "\n",
     "If such a matrix $A$ is expressed as shown above (as a weighted sum of unitaries), the LCU algorithmic primitive uses three (well, technically two) oracles:\n",
     "\n",
