Revision BE tutorial landing page

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -23,9 +23,9 @@
     "| :--- | :--- | :--- |\n",
     "| [.qubitization()](../../../reference/Block%20Encodings/methods/qubitization.rst) | Encodes $A$ into a \"walk operator\" $W$ |  [reflection](../../../reference/Primitives/reflection.rst) |\n",
     "| [.chebyshev(k)](../../../reference/Block%20Encodings/methods/chebyshev.rst) | Computes the $k$-th Chebyshev polynomial $T_k(A)$ | Iterative application of $W^k$ |\n",
-    "| [.poly(coeffs)](../../../reference/Block%20Encodings/methods/poly.rst) | Applies an arbitrary polynomial transformation $P(A)$ | [GQSP]((https://arxiv.org/pdf/2308.01501)), [GQET](https://arxiv.org/pdf/2312.00723)|\n",
-    "| [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst) | Solves the [linear system](https://arxiv.org/pdf/2411.02522) $Ax = b$ | [GQSP]((https://arxiv.org/pdf/2308.01501)), $1/x$ Chebyshev approximation |\n",
-    "| [.sim(t, N)](../../../reference/Block%20Encodings/methods/sim.rst) | Simulates Hamiltonian evolution $e^{-iHt}$ | [GQSP]((https://arxiv.org/pdf/2308.01501)), Jacobi-Anger expansion (Bessel functions) |\n",
+    "| [.poly(coeffs)](../../../reference/Block%20Encodings/methods/poly.rst) | Applies an arbitrary polynomial transformation $P(A)$ | [GQSP](https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.5.020368), [GQET](https://arxiv.org/pdf/2312.00723)|\n",
+    "| [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst) | Solves the [linear system](https://arxiv.org/pdf/2411.02522) $Ax = b$ | [GQSP](https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.5.020368), $1/x$ Chebyshev approximation |\n",
+    "| [.sim(t, N)](../../../reference/Block%20Encodings/methods/sim.rst) | Simulates Hamiltonian evolution $e^{-iHt}$ | [GQSP](https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.5.020368), Jacobi-Anger expansion (Bessel functions) |\n",
     "\n",
     "But first things first. Let's break down the concept called qubitization."
    ]
